# go-html-template

./: .gitignore  Cargo.toml  README.md  todo.md  typescript
benchmarks/: go_compare_results_2026-02-15.md
benchmarks/go_compare_cases/: attr_20k.tmpl  data_main.json  deep_path_20k.tmpl  expr_20k.tmpl  func_print_20k.tmpl  if_else_20k.tmpl  range_no_vars.tmpl  range_var_assign.tmpl  range_var_decl.tmpl  script_100.tmpl  script_2.tmpl  script_2k.tmpl  static_200k.tmpl  style_100.tmpl  style_2k.tmpl  template_call_range.tmpl  url_20k.tmpl
src/: lib.rs
tests/: issue_1_script_utf8.rs  issue_2_script_tojson_context.rs
tools/compare_go_html_template/: main.go
translates/ja/: README.md
